# Lumina

./: .env.example  .gitignore  README.md  render.yaml  update.json  update_vercel.py
circuits/: .env.example  check_seeds.ts  deploy.ts  package-lock.json  package.json  releases.json  test-wallet.ts  test.ts  time1.json  time2.json
circuits/src/: employee.compact
contracts/: Cargo.toml
contracts/cardano-escrow/: README.md  aiken.toml  deploy.ts  plutus.json
contracts/cardano-escrow/validators/: escrow.ak
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/src/: auth.rs  bounty.rs  errors.rs  lib.rs  test.rs
frontend/: fix-midnight.js  fund.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: actions.ts  layout.tsx  page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/components/: DemoToggle.tsx  LandingPage.tsx  RegulatorDashboard.tsx  WalletConnect.tsx  WhistleblowerPortal.tsx
frontend/src/lib/: DemoModeContext.tsx  WalletContext.tsx  midnight_integration.ts
lumina-contract/: README.md  docker-compose.yml  package-lock.json  package.json
lumina-contract/contracts/: employee.compact
lumina-contract/midnight-level-db/: 000005.ldb  000008.ldb  LOG  LOG.old  MANIFEST-000010
lumina-contract/scripts/: e2e-check.ts
lumina-contract/src/: api_verify.ts  cli.ts  deploy.ts  relayer.ts  setup.ts
